Fix carousel picture wrapping image leading to overflow css bug

--- a/src/components/carousel/style.module.scss
+++ b/src/components/carousel/style.module.scss
@@ -78,7 +78,14 @@
   z-index: 1;
 }
 
-.carousel {
+.pictureWrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.image {
   display: block;
   margin: auto;
   max-width: 100%;
